test/fixtures/syntax_error/runtests.jl
using Test

# A deliberately unclosed string.

"
